--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -61,7 +61,7 @@
     "technologies": ["React", "CSS", "Firebase Auth", "NoSQL database"],
     "isFinished": true,
     "preview": "netflix-preview.jpg",
-    "screenshot": "netflix-screenshot.jpg",
+    "screenshot": "netelix-screenshot1.jpg",
     "github": "https://github.com/FeNatalia/netflix-clone",
     "website": "https://netelixclone.web.app"
   }
