--- a/src/data/projects-salt.json
+++ b/src/data/projects-salt.json
@@ -1,12 +1,12 @@
 [
     {
       "id": 1,
-      "title": "Todo List (Redux)",
-      "description": "ToDoList is a simple todo list app with a text-based user interface. You can add your tasks, see and maintain a list of your tasks. The app is controlled by commands written by the user in a terminal. It uses:",
-      "technologies": ["Redux"],
+      "title": "Todo list (Redux)",
+      "description": "ToDoList is a simple todo list app where you can add your tasks, see and maintain a list of your tasks. It uses:",
+      "technologies": ["Redux", "React", "CSS"],
       "isFinished": true,
-      "preview": "java-todo-preview.jpg",
-      "screenshot": "java-todo-screenshot.jpg",
+      "preview": "redux-preview.jpg",
+      "screenshot": "redux-screenshot.jpg",
       "github": "https://github.com/FeNatalia/ToDoListProject",
       "website": ""
     },
@@ -17,14 +17,14 @@
       "technologies": ["NodeJS", "ExpressJS", "React", "CSS",  "REST API"],
       "isFinished": true,
       "preview": "movieclub-preview.jpg",
-      "screenshot": "movieclub-screenshot.jpg",
+      "screenshot": "countries-screenshot.jpg",
       "github": "https://github.com/FeNatalia/My-Online-Forum",
       "website": ""
     },
     {
       "id": 3,
       "title": "Lendit - Lending App",
-      "description": "Lendil is a fullstack platform where users can lend their items to others or borrow things that they need. It uses:",
+      "description": "Lendit is a fullstack platform where users can lend their items to others or borrow things that they need. It uses:",
       "technologies": ["NodeJS", "ExpressJS", "React", "CSS", "EmailJS", "GitHub Actions" ,"Firebase Auth", "MongoDB", "Heroku"],
       "isFinished": true,
       "preview": "lendit-preview.jpg",
