--- a/src/data/projects-salt.json
+++ b/src/data/projects-salt.json
@@ -7,7 +7,7 @@
       "isFinished": true,
       "preview": "redux-preview.jpg",
       "screenshot": "redux-screenshot.jpg",
-      "github": "https://github.com/FeNatalia/ToDoListProject",
+      "github": "https://github.com/FeNatalia/redux",
       "website": ""
     },
     {
@@ -18,7 +18,7 @@
       "isFinished": true,
       "preview": "countries-preview.jpg",
       "screenshot": "countries-screenshot.jpg",
-      "github": "https://github.com/FeNatalia/My-Online-Forum",
+      "github": "https://github.com/FeNatalia/country-finder",
       "website": ""
     },
     {
